# Abdi1717.github.io

./: README.md  _config.yml  index.html
GameCode/: CMakeLists.txt  main.c  sendImageDataPico.py
_layouts/: default.html
_site/: README.md  index.html
_site/assets/css/: style.css
_site/images/: failure1.HEIC  failure2.HEIC
assets/css/: style.scss
images/: design.HEIC  terminalReading.heic
